# bazar_api

./: Cargo.toml  compose.yaml  dockerfile
src/: main.rs
src/controllers/: favorites_controller.rs  mod.rs  product_controller.rs  user_controller.rs
src/db/: favorites_db.rs  mod.rs  mongo.rs  product_db.rs  user_db.rs
src/helpers/: mod.rs  password.rs  timezone.rs  token.rs
src/middlewares/: cors_middleware.rs  log.rs  mod.rs
src/models/: mod.rs  product_models.rs  user_models.rs
src/response/: user_response.rs
src/routes/: mod.rs  product_routes.rs  user_routes.rs
