[package]
name = "bazar_api"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"
mongodb = "3.1.0"
bson = "2.0"
tokio = { version = "1", features = ["full"] }
utoipa-swagger-ui = "8"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
axum = "0.7.9"
