[package]
name = "bazar_api"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"
mongodb = "3.1.0"
bson = "2.0"
tokio = { version = "1", features = ["full"] }
utoipa-swagger-ui = "8"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
axum = "0.7.9"
jwt = "0.16.0"
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.16"
chrono-tz = "0.10.0"
tower-http = {version = "0.6.2", features = ["cors"]}


